[workspace]
members = [
  "core/*",
  "gadgets",
  "graphics",
]
default-members = [
  "core/*",
  "graphics",
  "gadgets",
]
resolver = "2"

[workspace.dependencies]
raw-window-handle = "0.6"
wgpu = "0.19"
egui = "0.18"
ultraviolet = "0.9"
bytemuck = "1"
serde = "1"
tracing = "0.1"
profiling = "1"
thiserror = "1"
