[workspace]
members = [
  "core/*",
  "gadgets",
  "graphics",
]
default-members = [
  "core/*",
  "graphics",
  "gadgets",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[workspace.dependencies]
raw-window-handle = "0.6"
cursor-icon = "1"
winit = "0.30"
wgpu = "0.20.1"
naga = "0.20" # sync with wgpu
egui = { git = "https://github.com/emilk/egui.git", rev = "814ad07" }
ultraviolet = "0.9"
image = { version = "0.25", default-features = false }
bytemuck = "1"
serde = "1"
smol_str = "0.2"
tracing = "0.1"
profiling = "1"
thiserror = "1"
