[package]
name = "gadgets"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
os = { path = "../core/os"}
job_queue = { path = "../core/job_queue"}
profiling.workspace = true
tracing.workspace = true

[features]
profile-with-tracy = ["os/profile-with-tracy"]
