[package]
name = "gadgets"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
os = { path = "../core/os"}
job_queue = { path = "../core/job_queue"}
profiling.workspace = true
tracing.workspace = true

[features]
profile-with-tracy = ["os/profile-with-tracy"]
