[package]
name = "graphics"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
common = { path = "../core/common" }
os = { path = "../core/os" }
gfx = { path = "../core/gfx" }
gui_widget = { path = "../core/gui_widget" }
app = { path = "../core/app" }
voxel = { path = "../core/voxel" }
wgpu = { workspace = true, features = ["spirv"] }
egui = { workspace = true }
image = { workspace = true, default-features = false, features = ["bmp", "png"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
ultraviolet = { workspace = true, features = ["bytemuck", "int"] }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
profiling.workspace = true

[build-dependencies]
gfxc = { path = "../core/gfxc" }

[features]
profile-with-tracy = ["os/profile-with-tracy"]
