[package]
name = "graphics"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../core/common" }
os = { path = "../core/os" }
gfx = { path = "../core/gfx", features = ["serde", "inspector_gui"] }
gui = { path = "../core/gui" }
app = { path = "../core/app" }
voxel = { path = "../core/voxel" }
wgpu = { workspace = true, features = ["spirv"] }
egui = { workspace = true }
image = { workspace = true, default-features = false, features = ["bmp", "png"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
ultraviolet = { workspace = true, features = ["bytemuck", "int"] }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
profiling.workspace = true

[build-dependencies]
gfxc = { path = "../core/gfxc" }

[features]
profile-with-tracy = ["os/profile-with-tracy"]
