[package]
name = "app"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
common = { path = "../common" }
os = { path = "../os" }
gfx = { path = "../gfx" }
gui = { path = "../gui" }
wgpu = "0.12"
raw-window-handle = "0.4"
egui = "0.16.1"
futures = "0.3"
dotenv = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
