[package]
name = "app"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
common = { path = "../common" }
os = { path = "../os" }
gfx = { path = "../gfx" }
gui = { path = "../gui" }
gui_widget = { path = "../gui_widget" }
wgpu = "0.12"
raw-window-handle = "0.4"
egui = { version = "0.18", features = ["persistence"] }
pollster = "0.2"
serde = { version = "1", features = ["derive"] }
ron = "0.7"
dotenv = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
tracing-log = "0.1"
profiling = "1"
tracy-client = { version = "0.13", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.tracing-wasm]
version = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.console_error_panic_hook]
version = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "0.12"
features = ["webgl"]

[features]
profile-with-tracy = ["profiling/profile-with-tracy", "dep:tracy-client"]
