[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
os = { path = "../os" }
gfx = { path = "../gfx" }
gui = { path = "../gui" }
gui_widget = { path = "../gui_widget" }
raw-window-handle.workspace = true
wgpu.workspace = true
egui = { workspace = true, features = ["persistence"] }
pollster = "0.3"
serde = { workspace = true, features = ["derive"] }
ron = "0.8"
thiserror.workspace = true
tracing.workspace = true
profiling.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies.tracing-wasm]
version = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.console_error_panic_hook]
version = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
workspace = true
features = ["webgl"]
