[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
cursor-icon = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
smol_str.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"

[features]
default = []
serde = ["dep:serde", "cursor-icon?/serde", "winit?/serde", "egui?/serde"]
cursor_icon = ["dep:cursor-icon"]
winit = ["dep:winit"]
egui = ["dep:egui"]
