[package]
name = "gfx"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../../core/common" }
wgpu = { workspace = true }
egui = { workspace = true, optional = true }
gui_widget = { path = "../../core/gui_widget", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
image = { workspace = true, default-features = false }
ultraviolet.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true
profiling.workspace = true

[build-dependencies]
gfxc = { path = "../gfxc" }

[features]
default = ["serde", "debugging_gui"]
serde = ["dep:serde", "common/serde", "egui/serde", "ultraviolet/serde"]
debugging_gui = ["egui", "gui_widget"]
