[package]
name = "gfx"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../../core/common" }
wgpu = { workspace = true }
egui = { workspace = true, optional = true }
gui = { path = "../gui", optional = true }
image = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"], optional = true }
ultraviolet.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true
profiling.workspace = true

[build-dependencies]
gfxc = { path = "../gfxc" }

[features]
default = []
serde = ["dep:serde", "common/serde", "ultraviolet/serde", "egui?/serde"]
inspector_gui = ["dep:egui", "dep:gui"]
