[package]
name = "gui"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
common = { path = "../../core/common" }
os = { path = "../../core/os" }
gfx = { path = "../../core/gfx" }
egui = { workspace = true, features = ["bytemuck"] }
wgpu = { workspace = true }
bytemuck = { version = "1.5", features = ["derive"] }
thiserror = "1"
profiling = "1"

[build-dependencies]
gfxc = { path = "../../core/gfxc" }
