[package]
name = "gui"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
common = { path = "../../core/common", features = ["egui"] }
os = { path = "../../core/os" }
gfx = { path = "../../core/gfx" }
egui = { workspace = true, features = ["bytemuck"] }
wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
profiling.workspace = true

[build-dependencies]
gfxc = { path = "../../core/gfxc" }
