[package]
name = "gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../../core/common", features = ["egui", "cursor_icon"] }
os = { path = "../../core/os" }
gfx = { path = "../../core/gfx" }
egui = { workspace = true, features = ["bytemuck"] }
wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
profiling.workspace = true

[build-dependencies]
gfxc = { path = "../../core/gfxc" }
