[package]
name = "job_queue"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
flume = "0.10"
petgraph = { version = "0.6", default-features = false, features = ["graphmap"] }
hashlink = "0.9"
rustc-hash = "1"
tracing.workspace = true
profiling.workspace = true
