[package]
name = "job_queue"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
flume = "0.11"
petgraph = { version = "0.6", default-features = false, features = ["graphmap"] }
hashlink = "0.9"
rustc-hash = "1"
tracing.workspace = true
profiling.workspace = true
