[package]
name = "os"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
common = { path = "../common" }
winit = "0.27"
directories-next = "2"
thiserror = "1.0"
tracing = "0.1"
profiling = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
