[package]
name = "os"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common", features = ["winit"] }
profiling.workspace = true
tracy-client = { version = "0.17", optional = true }
dotenvy = "0.15"
dotenvy_macro = "0.15"
directories = "5"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
winit.workspace = true
arboard = "3"
webbrowser = "1"
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"

[features]
default = []
profile-with-tracy = ["profiling/profile-with-tracy", "dep:tracy-client"]
