[package]
name = "voxel"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
rust-version = "1.60"
publish = false

[dependencies]
common = { path = "../common" }
gfx = { path = "../gfx" }
gui_widget = { path = "../gui_widget" }
job_queue = { path = "../job_queue" }
simdnoise = { git = "https://github.com/jackmott/rust-simd-noise.git", branch = "master" }
wgpu = { version = "0.12", features = ["spirv"] }
egui = "0.18"
ultraviolet = { version = "0.9", features = ["bytemuck", "int"] }
bytemuck = { version = "1.5", features = ["derive"] }
flagset = "0.4"
rustc-hash = "1"
serde = { version = "1", features = ["derive"], optional = true }
tracing = "0.1"
profiling = "1"

[build-dependencies]
gfxc = { path = "../gfxc" }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["cargo_bench_support", "html_reports"] }

[[bench]]
name = "benches"
harness = false

[features]
default = ["serde"]
serde = ["dep:serde", "ultraviolet/serde"]

