[package]
name = "voxel"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
rust-version = "1.60"
publish = false

[dependencies]
common = { path = "../common" }
gfx = { path = "../gfx" }
gui_widget = { path = "../gui_widget" }
job_queue = { path = "../job_queue" }
simdnoise = "3"
wgpu = { workspace = true, features = ["spirv"] }
egui.workspace = true
ultraviolet = { workspace = true, features = ["bytemuck", "int"] }
bytemuck = { workspace = true, features = ["derive"] }
flagset = "0.4"
rustc-hash = "1"
serde = { workspace = true, features = ["derive"], optional = true }
tracing.workspace = true
profiling.workspace = true

[build-dependencies]
gfxc = { path = "../gfxc" }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["cargo_bench_support", "html_reports"] }

[[bench]]
name = "benches"
harness = false

[features]
default = ["serde"]
serde = ["dep:serde", "ultraviolet/serde"]

