[package]
name = "cubes"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
common = { path = "../../core/common" }
os = { path = "../../core/os" }
gfx = { path = "../../core/gfx" }
app = { path = "../../core/app" }
wgpu = "0.7"
egui = "0.11"
ultraviolet = { version = "0.8", features = ["bytemuck"] }
rand = { version = "0.8", features = ["small_rng"] }
bytemuck = { version = "1.5", features = ["derive"] }
tracing = "0.1"

[build-dependencies]
gfxc = { path = "../../core/gfxc" }
