[package]
name = "quads"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
common = { path = "../../core/common" }
os = { path = "../../core/os" }
gfx = { path = "../../core/gfx" }
gui = { path = "../../core/gui" }
app = { path = "../../core/app" }
wgpu = "0.7"
egui = "0.11"
ultraviolet = { version = "0.8", features = ["bytemuck"] }
bytemuck = { version = "1.5", features = ["derive"] }
image = "0.23"
tracing = "0.1"

[build-dependencies]
gfxc = { path = "../../core/gfxc" }
