[package]
name = "voxel_meshing"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
common = { path = "../../core/common" }
os = { path = "../../core/os" }
gfx = { path = "../../core/gfx" }
gui_widget = { path = "../../core/gui_widget" }
app = { path = "../../core/app" }
graphics = { path = ".." }
simdnoise = { git = "https://github.com/jackmott/rust-simd-noise.git", branch = "master" }
wgpu = { version = "0.12", features = ["spirv"] }
egui = "0.16.1"
ultraviolet = { version = "0.8", features = ["bytemuck", "int"] }
bytemuck = { version = "1.5", features = ["derive"] }
rayon = "1.5"
lru = "0.7"
flagset = "0.4"
tracing = "0.1"

[build-dependencies]
gfxc = { path = "../../core/gfxc" }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["cargo_bench_support", "html_reports"] }

[[bin]]
name = "demo"
test = false
bench = false

[[bench]]
name = "benches"
harness = false
